[package]
name = "scraper"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.24" }
dotenv = { version = "0.15.0" }
tokio = { version = "1", features = ["full"] }
serde_json = { version = "1.0.145" }
serde = { version = "1.0.228" }
postgres = "0.19.12"
postgres-types = { version = "0.2.11", features = ["derive"]}
